tests/sksl/errors/ReservedNameSamplerCube.glsl
### Compilation failed:

error: 1: 'samplerCube' is a reserved word
int samplerCube;
    ^^^^^^^^^^^
1 error
